# golf-router

./: .gitignore  main.ipynb  pyproject.toml
data/: dummy_golf_course.csv  dummy_station.csv
golf_router/: golf_course_repository.py  router.py  spot.py  station_repository.py
