[tool.poetry]
name = "golf-router"
version = "0.1.0"
description = ""
authors = ["L19 <akema@amiya.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
googlemaps = "^4.10.0"
pandas = {version = "^2.1.1", python = ">=3.11,<3.13"}

[tool.poetry.group.dev.dependencies]
numpy = {version = "^1.26", python = ">=3.11,<3.13"}
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
selenium = "^4.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
